--- a/dashboard.html
+++ b/dashboard.html
@@ -144,6 +144,7 @@
         utils.buildMobileNav?.();
         utils.applyNavVisibility?.();
         utils.registerServiceWorker?.();
+        utils.setupLogout?.();
       }
     });
   </script>
