Employee dashboard reworked

--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -48,19 +48,10 @@
         </div>
       </header>
 
-      <section class="card employee-hero">
-        <div class="employee-hero-inner">
-          <div>
-            <h3 class="employee-hero-title">Go to your tasks</h3>
-            <div class="employee-hero-sub">Jump straight into your daily workflows.</div>
-          </div>
-          <div class="employee-hero-actions">
-            <a href="inventory-operations.html?mode=checkout" class="task-btn primary">Receive / Pick</a>
-            <a href="inventory-list.html" class="task-btn ghost">Check Stock</a>
-            <a href="job-creator.html#report" class="task-btn ghost">Project Activity</a>
-            <a href="field-purchase.html" class="task-btn ghost">Field Purchases</a>
-          </div>
-        </div>
+      <section class="employee-actions">
+        <a class="employee-action" href="inventory-operations.html?mode=checkout">Pick Items</a>
+        <a class="employee-action" href="field-purchase.html">Field Purchase</a>
+        <a class="employee-action" href="inventory-list.html">Inventory</a>
       </section>
     </main>
   </div>
