--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -49,9 +49,9 @@
       </header>
 
       <section class="employee-actions">
-        <a class="employee-action" href="inventory-operations.html?mode=checkout">Pick Items</a>
-        <a class="employee-action" href="field-purchase.html">Field Purchase</a>
-        <a class="employee-action" href="inventory-list.html">Inventory</a>
+        <a class="employee-action" data-icon="⛟" href="inventory-operations.html?mode=checkout">Pick Items</a>
+        <a class="employee-action" data-icon="⊕" href="field-purchase.html">Field Purchase</a>
+        <a class="employee-action" data-icon="▦" href="inventory-list.html">Inventory</a>
       </section>
     </main>
   </div>
