Alert setting impr.

--- a/item-master.html
+++ b/item-master.html
@@ -75,7 +75,7 @@
             </div>
             <div class="form-row" style="align-items:center;">
               <label style="display:flex;align-items:center;gap:8px;">
-                <input id="itemLowStockEnabled" type="checkbox" checked>
+                <input id="itemLowStockEnabled" type="checkbox">
                 Enable low stock alerts
               </label>
               <label style="display:flex;align-items:center;gap:8px;"><input id="itemSerialized" type="checkbox"> Serialized</label>
@@ -141,7 +141,7 @@
             </div>
             <div class="form-row" style="align-items:center;">
               <label style="display:flex;align-items:center;gap:8px;">
-                <input id="ruleLowStockEnabled" type="checkbox" checked>
+                <input id="ruleLowStockEnabled" type="checkbox">
                 Enable low stock alerts
               </label>
             </div>
