--- a/login.html
+++ b/login.html
@@ -27,6 +27,10 @@
           </div>
           <button type="submit">Login</button>
         </div>
+        <div class="auth-links">
+          <a class="auth-link" href="reset.html">Forgot password?</a>
+          <button id="resendVerify" class="auth-link hidden" type="button">Resend verification email</button>
+        </div>
         <div class="auth-footer">Need access? Contact your administrator.</div>
         <div id="login-error" class="auth-error"></div>
       </form>
