--- a/settings.html
+++ b/settings.html
@@ -164,7 +164,7 @@
                   <label>Email<input id="userEmail" type="email" required></label>
                 </div>
                 <div class="form-row">
-                  <label>Password<input id="userPassword" type="password" required></label>
+                  <label>Password<input id="userPassword" type="password"></label>
                   <label>Role
                     <select id="userRole">
                       <option value="employee">Employee</option>
@@ -175,6 +175,7 @@
                 </div>
                 <div class="form-row">
                   <button type="submit">Create User</button>
+                  <button id="userInviteBtn" type="button" class="muted">Send Invite</button>
                   <button id="userGeneratePwd" type="button" class="muted">Generate Password</button>
                   <button id="userClearBtn" type="button" class="muted">Clear</button>
                 </div>
