--- a/features.html
+++ b/features.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -18,9 +18,6 @@
         <div class="logo-text">Modulr<span>THE FUTURE OF BUSINESS OS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
-        <a href="dashboard.html" data-role="admin">Dashboard</a>
-        <a href="ops-dashboard.html" data-role="manager">Dashboard</a>
-        <a href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="index.html">Home</a>
         <a class="active" href="features.html">Features</a>
         <a href="pricing.html">Pricing</a>
