--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -18,9 +18,6 @@
         <div class="logo-text">Modulr<span>THE FUTURE OF BUSINESS OS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
-        <a href="dashboard.html" data-role="admin">Dashboard</a>
-        <a href="ops-dashboard.html" data-role="manager">Dashboard</a>
-        <a href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a class="active" href="index.html">Home</a>
         <a href="features.html">Features</a>
         <a href="pricing.html">Pricing</a>
@@ -41,7 +38,7 @@
           <p class="pill"></p>
           <h1>Stop Losing Inventory. Run It Like a Command Center.</h1>
           <p class="whisper">Built for SMBs who manage real equipment, not spreadsheets.</p>
-          <p>Modulr unifies purchasing, inventory, and field usage into one real-time operations console—so nothing goes missing, work never stalls, and every movement is auditable.</p>
+          <p>Modulr unifies purchasing, inventory, and field usage into one real-time operations consoleâ€”so nothing goes missing, work never stalls, and every movement is auditable.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a Live demo</a>
             <a class="btn btn-secondary" href="pricing.html">View Pricing and Plans</a>
@@ -63,7 +60,7 @@
         </div>
         <div class="hero-card fade-up delay-2">
           <h3>Live Operations Console</h3>
-          <p class="muted">See orders, inventory levels, and job allocations across every location—updated in real time.</p>
+          <p class="muted">See orders, inventory levels, and job allocations across every locationâ€”updated in real time.</p>
           <div class="grid">
             <div class="card">
               <strong>Open Orders</strong>
