--- a/pricing.html
+++ b/pricing.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -18,9 +18,6 @@
         <div class="logo-text">Modulr<span>THE FUTURE OF BUSINESS OS</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
-        <a href="dashboard.html" data-role="admin">Dashboard</a>
-        <a href="ops-dashboard.html" data-role="manager">Dashboard</a>
-        <a href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="index.html">Home</a>
         <a href="features.html">Features</a>
         <a class="active" href="pricing.html">Pricing</a>
@@ -40,9 +37,9 @@
         <div class="fade-up">
           <p class="pill">Pricing</p>
           <h1>Pricing that scales with how your business actually operates</h1>
-          <p>Start with the systems you need today. Add advanced capabilities only when you’re ready.</p>
+          <p>Start with the systems you need today. Add advanced capabilities only when youâ€™re ready.</p>
           <ul class="list">
-            <li><span>1</span>Modular systems — no forced bundles</li>
+            <li><span>1</span>Modular systems â€” no forced bundles</li>
             <li><span>2</span>Advanced features require solid foundations</li>
             <li><span>3</span>Built for accuracy, scale, and control</li>
           </ul>
@@ -126,7 +123,7 @@
       <div class="container">
         <div class="section-heading fade-up">
           <h2>Advanced Capabilities</h2>
-          <p>Extend your system with specialized functionality. Each pack adds value on its own when you’re ready to upgrade.</p>
+          <p>Extend your system with specialized functionality. Each pack adds value on its own when youâ€™re ready to upgrade.</p>
         </div>
         <div class="pricing capability-grid">
           <div class="price-card fade-up delay-1">
@@ -212,9 +209,9 @@
         </div>
         <div class="contact-card fade-up delay-2">
           <ul class="list">
-            <li><span>1</span>Start Simple — Choose the systems you need today</li>
-            <li><span>2</span>Add Capabilities — Enhance without re-platforming</li>
-            <li><span>3</span>Operate at Full Control — Accuracy, automation, and insight</li>
+            <li><span>1</span>Start Simple â€” Choose the systems you need today</li>
+            <li><span>2</span>Add Capabilities â€” Enhance without re-platforming</li>
+            <li><span>3</span>Operate at Full Control â€” Accuracy, automation, and insight</li>
           </ul>
         </div>
       </div>
@@ -233,7 +230,7 @@
           </div>
           <div class="price-card fade-up delay-2">
             <h3>Can I add or remove modules later?</h3>
-            <p class="muted">Yes — upgrade or downgrade anytime.</p>
+            <p class="muted">Yes â€” upgrade or downgrade anytime.</p>
           </div>
           <div class="price-card fade-up delay-3">
             <h3>Why do some features require multiple modules?</h3>
